<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Domee</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="text_Limit">140</string>
	<string name="oauth">微博认证OAUTH2.0</string>
	<string name="sso">SSO认证</string>
	<string name="tab_title">微博正文</string>
	<string name="tab_friendtimeline">首页</string>
	<string name="tab_at">提及</string>
	<string name="tab_comment">评论</string>
	<string name="tab_profile">个人</string>
</resources>